opsi4ucs (4.0.2.2-1) quantal; urgency=low

  * For handling with new pcpatch-group added opsi.conf.

 -- Erol Ueluekmen <e.ueluekmen@uib.de>  Thu, 19 Jul 2012 15:17:21 +0200

opsi4ucs (4.0.2.1-1) testing; urgency=low

  * Featurepack-Release 4.0.2 for ucs.
  * First Release for UCS 3 Support:
      - uninvetion-ldap-backend is not support since ucs3 (default backend: file)
  * Fixes 99opsi4ucs.inst-Joinscript

 -- Erol Ueluekmen <e.ueluekmen@uib.de>  Fri, 29 Jun 2012 10:13:10 +0200

opsi4ucs (4.0.1.11-1) experimental; urgency=low

  * opsi-setup: registerdepot non-interactive mode added for univention-join-scripts
  * 99opsi4ucs.inst:
      - added new opsi-setup implementation for joinscript
      - added new attribute OpsiConfigserver for univentionService

 -- Erol Ueluekmen <e.ueluekmen@uib.de>  Fri, 20 Apr 2012 14:07:57 +0200

opsi4ucs (4.0.1.10-1) stable; urgency=low

  * 99opsi4ucs: Depotserver isMasterDepot (multidepot-fix)
  * opsi-setup: fix reading problems with sudoers-file and smb.conf

 -- Erol Ueluekmen <e.ueluekmen@uib.de>  Wed, 15 Feb 2012 17:05:49 +0100

opsi4ucs (4.0.1.9-1) experimental; urgency=low

  * Install Dependecies for ucs 3.0
  * EXPERIMENTAL

 -- Erol Ueluekmen <e.ueluekmen@uib.de>  Tue, 17 Jan 2012 17:44:51 +0100

opsi4ucs (4.0.1.8-1) stable; urgency=low

  * 99opsi4ucs.inst: Fix: UCS-Master can be opsi-depotserver and must not be opsi-configserver
  * opsi4ucs postinst: Only run 99opsi4ucs.inst when installing package on UCS-Master or UCS-Backup
  * opsi-setup: fix init-current-config for executing on OpsiDepotserver

 -- Erol Ueluekmen <e.ueluekmen@uib.de>  Fri, 21 Oct 2011 11:59:33 +0200

opsi4ucs (4.0.1.7-1) stable; urgency=low

  * 99opsi4ucs.inst: Automatic configuration from depot-server for work over jsonrpc
  * Added dispatch.conf.jsonrpc

 -- Erol Ueluekmen <e.ueluekmen@uib.de>  Fri, 14 Oct 2011 15:01:47 +0200

opsi4ucs (4.0.1.6-1) stable; urgency=low

  * 99opsi4ucs.inst: Add isMasterDepot Attribute
