@@ -1,6 +1,6 @@
-<tr>
-<td class="overview"><a onClick="javascript:window.open('https://' + location.hostname + ':4447/configed', 'configed','toolbar=no,menubar=no,scrollbars=yes,resizable=yes,fullscreen=yes,location=no,directories=no,status=no');return false"><img src="../icon/opsi/configed.png" alt="" border="0" /></a></td>
-<td class="overview"><a onClick="javascript:window.open('https://' + location.hostname + ':4447/configed', 'configed','toolbar=no,menubar=no,scrollbars=yes,resizable=yes,fullscreen=yes,location=no,directories=no,status=no');return false">Opsi Management Interface</a></td>
-<td class="overview">Management Interface zur Verwaltung von opsi</td>
-</tr>
-
+@!@
+print '<tr>'
+print '<td class="overview"><a href="https://@%@ldap/server/name@%@:4447/configed.jnlp"><img src="../icon/opsi/configed.png" alt="" border="0" /></a></td>'
+print '<td class="overview"><a href="https://@%@ldap/server/name@%@:4447/configed.jnlp">Management zur Verwaltung von opsi</a></td>'
+print '<td class="overview">Management Interface für Windows-Client-Management mit <a href="http://www.opsi.org">opsi</a> (Applet startet über Java-Webstart).</td>'
+@!@
