@@ -1,6 +1,7 @@
 opsi4ucs (4.0.2.2-1) quantal; urgency=low
 
   * For handling with new pcpatch-group added opsi.conf.
+  * UCSOverview-page changed from applet to java-webstart.
 
  -- Erol Ueluekmen <e.ueluekmen@uib.de>  Thu, 19 Jul 2012 15:17:21 +0200
 
